Create project's template

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 3%;
+  margin-top: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.main div {
+  height: max-content;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Colors */
+.bg-white {
+  background-color: #fff;
+}
+
+/* Typography */
+h1 {
+  font-size: 40px;
+}
+
+h2 {
+  font-size: 32px;
+}
+
+.caption {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #4d4d4d;
 }
