--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,13 @@ h2 {
   text-transform: uppercase;
   color: #4d4d4d;
 }
+
+/* Padding */
+.p-0 {
+  padding: 0;
+}
+
+/* Margin */
+.m-0 {
+  margin: 0;
+}
