Add adding post functionality

--- a/src/components/shared/Form/Form.module.css
+++ b/src/components/shared/Form/Form.module.css
@@ -6,7 +6,8 @@
     padding: 20px;
 }
 
-.wrap form input {
+.wrap form input,
+.wrap form textarea {
     width: 100%;
     padding: 14px;
     margin-top: 6px;
@@ -16,7 +17,12 @@
     transition: border-color .2s, background-color .2s;
 }
 
-.wrap form input:focus {
+.wrap form textarea {
+    resize: vertical;
+}
+
+.wrap form input:focus,
+.wrap form textarea:focus {
     border: 2px solid #c3c3c3;
     outline: none;
 }
