--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -1,5 +1,6 @@
 header {
     margin: 3%;
+    margin-bottom: 0;
     padding: 1%;
     background-color: #fff;
 }
@@ -7,4 +8,44 @@ header {
 header h1 {
     text-transform: uppercase;
     text-align: center;
+}
+
+.menu ul {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 3%;
+    padding: 0;
+    background-color: slategrey;
+}
+
+.menu ul li, 
+.menu ul li a {
+    transition: all .2s;
+}
+
+.menu ul li {
+    width: 100%;
+    text-align: center;
+    list-style: none;
+}
+
+.menu ul li:hover {
+    background-color: rgb(111, 150, 189);
+    cursor: pointer;
+}
+
+.menu ul li:last-child {
+    border-right: none;
+}
+
+.menu ul li a {
+    display: block;
+    padding: 20px;
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.menu .menu-item-active {
+    background-color: rgb(44, 75, 107)
 }
