--- a/src/components/shared/Form/Form.module.css
+++ b/src/components/shared/Form/Form.module.css
@@ -12,7 +12,7 @@
     padding: 14px;
     margin-top: 6px;
     margin-bottom: 14px;
-    border: 2px solid transparent;
+    border: 1px solid transparent;
     border-radius: 4px;
     transition: border-color .2s, background-color .2s;
 }
@@ -23,7 +23,7 @@
 
 .wrap form input:focus,
 .wrap form textarea:focus {
-    border: 2px solid #c3c3c3;
+    border: 1px solid #c3c3c3;
     outline: none;
 }
 
@@ -31,6 +31,11 @@
     background-color: rgb(111, 224, 187);
     margin: 20px 0 0;
 }
+
 .wrap form input[type=submit]:hover {
     background-color: rgb(80, 165, 136);
+}
+
+.error {
+    border-color: red!important;
 }
