--- a/src/components/layout/Header/Header.css
+++ b/src/components/layout/Header/Header.css
@@ -27,6 +27,7 @@ header h1 {
     width: 100%;
     text-align: center;
     list-style: none;
+    border-right: 2px solid #5f6d7a;
 }
 
 .menu ul li:hover {
