--- a/src/components/shared/Form/Form.module.css
+++ b/src/components/shared/Form/Form.module.css
@@ -31,6 +31,7 @@
     text-transform: uppercase;
     background-color: rgb(111, 224, 187);
     margin: 20px 0 0;
+    cursor: pointer;
 }
 
 .wrap form input[type=submit]:hover {
