--- a/src/components/shared/Post/Post.module.css
+++ b/src/components/shared/Post/Post.module.css
@@ -1,4 +1,4 @@
-.post {
+.postWrapper {
     margin-bottom: 3%;
     padding: 3% 5% 5% 5%;
     background-color: #fff;
@@ -9,22 +9,24 @@
     justify-content: space-between;
 }
 
-.postDeleteBtn {
+.postActions {
+    display: flex;
+}
+
+.postActions button {
     margin: 1em 0 15px 15px;
     padding-top: 4px;
     font-size: 22px;
     color: #474747;
     border-width: 2px;
     border-radius: 4px;
-    border-color: rgba(255, 0, 0, 0.253);
+    border-color: #c9c9c9;
     cursor: pointer;
     outline: none;
-    transition: border-color .2s, transform .2s;
+    transition: border-color .2s;
 }
-.postDeleteBtn:hover {
-    border-color: red;
-    transform: rotateZ(90deg);
-    transform-origin: center;
+.postActions button:hover {
+    border-color: #161616;
 }
 
 .postImage {
